public/css/styles.css
@import url('colorscheme.css');
@import url('racecontrol.css');
@import url('table.css');
@import url('singledriver.css');

/* * {
	box-sizing: border-box;
} */

body {
	padding: 20px;
    /* background-image: linear-gradient(var(--white), var(--vibrant-red)); */
	font-family: Arial, Helvetica, sans-serif;
	max-width: 800px;
	margin: 0 auto;
    color: var(--deep-blue);
}

@media (width <= 799px) {
	body {
		margin: 20px;
	}

	nav {
		flex-direction: column;
	}

	h1 {
		text-align: center;
	}

	.center-small-box {
		text-align: center;
	}

}

p {
	white-space: pre-line;
}

button {
	background-color: white;
	color: black;
    font-weight: bold;
	padding: 10px;
	width: 130px;
	border: 1px solid black;
	border-radius: 5px;
	cursor: pointer;
}

.text-center {
	text-align: center;
}

.line-height-2 {
	line-height: 2;
}


/* Ensure the main ul is styled properly */
nav > ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
    display: flex;
    justify-content: center;
    align-items: center;
}

nav a {
    background-color: var(--light-gray);
    color: var(--deep-blue);
    padding: 10px;
    margin: 10px 20px;
    border: 1px solid black;
    border-radius: 10px;
    text-decoration: none;
    text-align: center;
    font-weight: bold;
    display: flex;
    flex-wrap: wrap;
}

nav a:hover {
    background-color: var(--bright-yellow);
}

/* Style the main li elements */
nav > ul > li {
    position: relative;
}

/* Hide the subnav by default */
.subnav {
    display: none;
    position: absolute;
    top: 20px; /* Position it 20px below the Live button */
    left: 50%; /* Start from the center of the parent element */
    transform: translateX(-50%); /* Center align */
    list-style-type: none;
    padding: 0;
    margin: 0;
    background-color: var(--white);

    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); Optional shadow for better visibility */
}

/* Show the subnav when the live button is hovered */
.live-button:hover .subnav {
    display: block;
}

/* Style the subnav items */
.subnav li {
    margin: 0;
    padding: 5px; /* Adjust padding as needed */
}

.subnav li a {
    text-decoration: none;
    color: var(--deep-blue);
    justify-content: center;
    align-items: center;
}

.subnav li a:hover {
    background-color: var(--bright-yellow); /* Adjust hover background color as needed */
}

